--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- TODO: we should use LESS and compile with grunt -->
-  <link rel="stylesheet" href="js/bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="js/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="js/bower_components/components-font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./client/js/bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./client/js/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="./client/js/bower_components/components-font-awesome/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -27,10 +27,10 @@
   </div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="js/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="./client/js/bower_components/jquery/dist/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="js/app.built.js"></script>
+  <script src="./client/js/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="./client/js/app.built.js"></script>
 
 </body>
 </html>
